[gd_scene load_steps=6 format=3 uid="uid://chutvg4cphxpb"]

[ext_resource type="Script" path="res://Scripts/Pause_Menu.gd" id="1_kbgv5"]
[ext_resource type="Texture2D" uid="uid://drkhxpoym1gm0" path="res://Graphics/Other_Materials/Background/Gray.png" id="1_r3dx2"]
[ext_resource type="Script" path="res://Scripts/Button.gd" id="3_547re"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_thaxh"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_t8y62"]
light_mode = 1

[node name="Pause_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kbgv5")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.0980392, 0.0980392, 0.0980392, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_r3dx2")
stretch_mode = 1

[node name="Pause_Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_Menu"]
layout_mode = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="Pause_Menu/VBoxContainer"]
material = SubResource("CanvasItemMaterial_thaxh")
layout_mode = 2
text = "Продовжити"
script = ExtResource("3_547re")

[node name="Options" type="Button" parent="Pause_Menu/VBoxContainer"]
material = SubResource("CanvasItemMaterial_thaxh")
layout_mode = 2
text = "Налаштування"
script = ExtResource("3_547re")

[node name="BackToMenu" type="Button" parent="Pause_Menu/VBoxContainer"]
material = SubResource("CanvasItemMaterial_thaxh")
layout_mode = 2
text = "Повернутись до головного меню"

[node name="Options_Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_right = -31.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options_Menu"]
layout_mode = 2

[node name="Graphic_Settings_VBox" type="VBoxContainer" parent="Options_Menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Графіка"
horizontal_alignment = 1

[node name="ScreenSize" type="VBoxContainer" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/ScreenSize"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2
text = "Розмір екрану"

[node name="OptionButton" type="OptionButton" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/ScreenSize"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2
script = ExtResource("3_547re")

[node name="Graphic_Options" type="HBoxContainer" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options/HBoxContainer"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2
text = "FullScreen"

[node name="FullScreen_check" type="CheckBox" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options/HBoxContainer"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options/HBoxContainer2"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2
text = "Віконний режим"

[node name="Borderless_Windowed_check" type="CheckBox" parent="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options/HBoxContainer2"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options_Menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="Button" type="Button" parent="Options_Menu/VBoxContainer2/VBoxContainer"]
material = SubResource("CanvasItemMaterial_t8y62")
layout_mode = 2
text = "Назад"

[connection signal="pressed" from="Pause_Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause_Menu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Pause_Menu/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="item_selected" from="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/ScreenSize/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options/HBoxContainer/FullScreen_check" to="." method="_on_full_screen_check_pressed"]
[connection signal="pressed" from="Options_Menu/VBoxContainer2/Graphic_Settings_VBox/Graphic_Options/HBoxContainer2/Borderless_Windowed_check" to="." method="_on_borderless_windowed_check_pressed"]
[connection signal="pressed" from="Options_Menu/VBoxContainer2/VBoxContainer/Button" to="." method="_on_button_pressed"]
